--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -31,7 +31,7 @@
   </table>
   <input class="btn btn-primary" type="submit" value="Salvar">
   <input class="btn btn-primary" type="submit" value="Imprimir">
-  <input class="btn btn-primary" type="submit" value="Inserir aluno" >
+  <input class="btn btn-primary" type="submit" value="Inserir um aluno" >
 {% endblock %}
 
 
